--- a/nodejs/pug/views/contactus.pug
+++ b/nodejs/pug/views/contactus.pug
@@ -40,7 +40,7 @@ section.page-title-section.bg-img.cover-background.top-position1.secondary-overl
               .ps-lg-1-9.ps-xl-7
                 .title-three.mb-1-9.mb-md-5
                   h3.text-primary Have Question? let us talk
-                form(action='http://localhost:5000/insert-contact', method='post')
+                form(action='http://localhost:5000/insert-contact', method='post',enctype='multipart/form-data')
                   .quform-elements
                     .row
                       // Begin Text input element
