--- a/nodejs/pug/views/contactus.pug
+++ b/nodejs/pug/views/contactus.pug
@@ -85,6 +85,11 @@ section.page-title-section.bg-img.cover-background.top-position1.secondary-overl
                             span.quform-required *
                           .quform-input
                             textarea#message.form-control(name='message', rows='3', placeholder='Tell us a few words')
+                      .col-md-12
+                        .quform-element.form-group
+                          label(for='kundli') Kundli
+                          .quform-input
+                            input#phone.form-control(type='file', name='kundli')
                       // End Textarea element
                       // Begin Submit button
                       .col-md-12
